--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <!--<section class="main">-->
         <div class="container">
             <div class="container__icon">
-                <img src="png/1.png" alt="" class="container__png">
+                <img src="PNG/1.png" alt="" class="container__png">
             </div>
             <div class="container__icon">
-                <img src="png/3.png" alt="" class="container__png">
+                <img src="PNG/3.png" alt="" class="container__png">
             </div>
             <div class="container__icon">
-                <img src="png/5.png" alt="" class="container__png">
+                <img src="PNG/5.png" alt="" class="container__png">
             </div>
             <div class="container__icon">
-                <img src="png/4.png" alt="" class="container__png">
+                <img src="PNG/4.png" alt="" class="container__png">
             </div>
             <div class="container__icon">
-                <img src="png/2.png" alt="" class="container__png">
+                <img src="PNG/2.png" alt="" class="container__png">
             </div>
         </div>
         <h1 class="main__heading">
